--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.main-conta {
+  width: 100vw;
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center; */
+} 
+
+.header-conta {
+  width: 100vw;
+  height: 10%;
+  padding: 1.5rem;
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  /* text-align: center; */
+  font-size: 2.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-conta p {
+  margin-top: 0.5rem;
+}
+
+.date {
+  font-weight: bold;
+}
+
+.tasks-conta {
+  width: 100vw;
+  /* height: 100vh; */
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+  border-radius: 10px;
+} 
+
+.list-conta {
+  width: 90%;
+}
+
+.task, .sub-task {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top:2.5px;
+  box-shadow: 2px 2.5px 2.5px grey;
+}
+
+.task {
+  width: 100%;
+}
+
+.task input, .sub-task input {
+  background-color: transparent;
+  border: 0;
+}
+
+.task input:focus, .sub-task input:focus {
+  outline: none;
+}
+
+.task input {
+  font-size: 16px;
+}
+
+.sub-task input {
+  font-size: 14px;
+}
+
+.sub-task {
+  width: 95%;
+  margin-left: auto;
+  /* margin-right: 0; */
+}
+
+.task-menu {
+  width: 25%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.add-task-btn-conta {
+  width: 100vw;
+  height: 100vh;
+} 
+
+.add-task-btn {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  font-size: 2em;
+  /* cursor: pointer; */
+  position: fixed;
+  bottom: 5%;
+  left: 50%;
+  margin-left: -35px;
+  color: white;
+  background-color: black;
+}
+
+.add-task-btn:active {
+  transform: scale(1.25);
+}
+
+.input-task {
+  width: 250px;
+  height: 50px;
+  border-radius: 5px;
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -25px;
+  margin-left: -125px;
+  background-color: white;
+  color: black;
+}
+
+.input-subtask {
+  width: 250px;
+  height: 50px;
+  border-radius: 5px;
+  border: 1px solid black;
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -25px;
+  margin-left: -125px;
+  /* background-color: white;
+  color: black; */
+}
+
+button {
+  cursor: pointer;
 }
