--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  border: 0; 
+  outline: 0; 
+  /* font-size: 100%; */
+  vertical-align: baseline;
+  background: transparent;
+  list-style-type: none;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
