--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .main-conta {
   width: 100vw;
   min-height: 100vh;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
+  /* background-color: black;
+  color: white; */
 } 
+
+/* HEADER */
 
 .header-conta {
   width: 100vw;
@@ -15,7 +16,6 @@
 }
 
 h1 {
-  /* text-align: center; */
   font-size: 2.5rem;
 }
 
@@ -23,8 +23,21 @@ h1 {
   margin-top: 0.5rem;
 }
 
-.date {
+/* .date {
   font-weight: bold;
+} */
+
+/* TASKS */
+
+.overlay {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  /* z-index: 0;  */
+  /* background:black; */
+  background:rgba(0,0,0,0.8);
+  /* backdrop-filter: blur(50px); */
+  opacity: 0.85;
 }
 
 .tasks-conta {
@@ -56,6 +69,12 @@ h1 {
   width: 100%;
 }
 
+.sub-task {
+  width: 95%;
+  margin-left: auto;
+  /* margin-right: 0; */
+}
+
 .task input, .sub-task input {
   background-color: transparent;
   border: 0;
@@ -73,22 +92,27 @@ h1 {
   font-size: 14px;
 }
 
-.sub-task {
-  width: 95%;
-  margin-left: auto;
-  /* margin-right: 0; */
-}
-
 .task-menu {
   width: 25%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-end; 
   align-items: center;
+  gap: 0.8rem;
 }
+
+.task-menu button {
+  font-size: 14px;
+}
+
+.task-menu button:hover {
+  transform: scale(1.50);
+}
+
+/* ADDTASKBUTTON */
 
 .add-task-btn-conta {
   width: 100vw;
-  height: 100vh;
+  height: 100vh; 
 } 
 
 .add-task-btn {
@@ -96,7 +120,6 @@ h1 {
   height: 70px;
   border-radius: 50%;
   font-size: 2em;
-  /* cursor: pointer; */
   position: fixed;
   bottom: 5%;
   left: 50%;
@@ -105,37 +128,58 @@ h1 {
   background-color: black;
 }
 
+.add-task-btn:hover {
+  color: black;
+  background-color: white;
+  border: 1px solid black;
+}
+
 .add-task-btn:active {
   transform: scale(1.25);
 }
 
-.input-task {
-  width: 250px;
-  height: 50px;
+.input-task, .input-subtask {
   border-radius: 5px;
   padding: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -25px;
-  margin-left: -125px;
   background-color: white;
   color: black;
 }
 
+.input-task {
+  width: 300px;
+  height: 65px;
+  /* border-radius: 5px;
+  padding: 10px; */
+  position: fixed;
+  bottom: 18%;
+  left: 50%;
+  margin-top: -32.5px;
+  margin-left: -150px;
+  /* background-color: white;
+  color: black; */
+}
+
+/* ADDSUBTASKBUTTON */
+
+/* .add-subtask-btn-conta {
+  width: 100vw;
+  height: 100vh; 
+}  */
+
 .input-subtask {
   width: 250px;
   height: 50px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   border: 1px solid black;
   padding: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -25px;
-  margin-left: -125px;
+  position: absolute; 
+  top: 15%;
+  right: 25%;
+  /* margin-top: -25px;
+  margin-left: -125px; */
+  z-index: 2;
   /* background-color: white;
-  color: black; */
+  color: black;  */
 }
 
 button {
