--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,18 @@
   padding: 1.5rem;
   background-color: black;
   color: white;
+
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2.6rem;
+  font-family: 'Poppins', serif;
+  word-spacing: -5px;
 }
 
 .header-conta p {
   margin-top: 0.5rem;
+  letter-spacing: 0.05em;
 }
 
 /* .date {
@@ -75,21 +79,24 @@ h1 {
   /* margin-right: 0; */
 }
 
-.task input, .sub-task input {
+.task-field, .sub-task-field {
   background-color: transparent;
   border: 0;
+  font-family:  'Montserrat', sans-serif;
 }
 
-.task input:focus, .sub-task input:focus {
+.task-field:focus, .sub-task-field:focus {
   outline: none;
 }
 
-.task input {
+.task-field {
   font-size: 16px;
+  font-weight: 500;
 }
 
-.sub-task input {
+.sub-task-field {
   font-size: 14px;
+
 }
 
 .task-menu {
@@ -139,6 +146,8 @@ h1 {
 }
 
 .input-task, .input-subtask {
+  width: 350px;
+  height: 60px;
   border-radius: 5px;
   padding: 10px;
   background-color: white;
@@ -146,40 +155,25 @@ h1 {
 }
 
 .input-task {
-  width: 300px;
-  height: 65px;
-  /* border-radius: 5px;
-  padding: 10px; */
   position: fixed;
-  bottom: 18%;
+  bottom: 15%;
   left: 50%;
-  margin-top: -32.5px;
-  margin-left: -150px;
-  /* background-color: white;
-  color: black; */
+  margin-left: -175px;
 }
 
 /* ADDSUBTASKBUTTON */
 
-/* .add-subtask-btn-conta {
-  width: 100vw;
-  height: 100vh; 
-}  */
-
 .input-subtask {
-  width: 250px;
-  height: 50px;
-  /* border-radius: 5px; */
-  border: 1px solid black;
-  padding: 10px;
   position: absolute; 
-  top: 15%;
-  right: 25%;
-  /* margin-top: -25px;
-  margin-left: -125px; */
-  z-index: 2;
-  /* background-color: white;
-  color: black;  */
+  top: 18%;
+  right: 15%;
+  z-index: 1;
+}
+
+/* OTHERS */
+
+input {
+  font-family: 'Rubik', sans-serif;
 }
 
 button {
