--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,13 @@
   padding: 0;
   border: 0; 
   outline: 0; 
-  /* font-size: 100%; */
   vertical-align: baseline;
   background: transparent;
   list-style-type: none;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
