--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 h1 {
   font-family: 'Poppins', serif;
   font-size: 2.5rem;
- font-weight: 600;
+  font-weight: 600;
   word-spacing: -5px;
 }
 
@@ -79,12 +79,18 @@ h1 {
 
 /* TASKS */
 
+.main-tasks-conta {
+  background-color: #f5f5f5;
+  /* background-color: #f2f3f4; */
+}
+
 .overlay {
   width: 100%;
   height: 100vh;
   position: absolute;
   background:rgba(0,0,0,0.8);
   opacity: 0.85;
+  z-index: 1;
 }
 
 .tasks-conta {
@@ -93,22 +99,29 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 2rem;
+  padding-top: 5px;
   border-radius: 10px;
 } 
 
 .list-conta {
-  width: 90%;
+  width: 98.5%;
+}
+
+.task-conta {
+  background-color: #fffefc;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 2px 2.5px 2.5px grey;
+  margin-bottom: 5px;
+  padding: 10px;
+  z-index: 0;
 }
 
 .task, .sub-task {
   display: flex;
   justify-content: space-between;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 10px;
-  margin-top:2.5px;
-  box-shadow: 2px 2.5px 2.5px grey;
+  padding: 4px;
+  /* margin-top:2.5px; */
 }
 
 .task {
@@ -116,8 +129,16 @@ h1 {
 }
 
 .sub-task {
-  width: 95%;
+  width: 98%;
+  height: 2em;
   margin-left: auto;
+}
+
+.sub-task-list {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 12px;
 }
 
 .task-field, .sub-task-field {
@@ -137,7 +158,7 @@ h1 {
 
 .sub-task-field {
   font-size: 14px;
-
+  padding-bottom: 1.8px;
 }
 
 .task-menu {
@@ -149,7 +170,7 @@ h1 {
 }
 
 .task-menu button {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .task-menu button:hover {
@@ -173,7 +194,6 @@ h1 {
   left: 50%;
   margin-left: -35px;
   color: white;
-  /* background-color: black; */
 }
 
 .add-task-btn:hover {
@@ -186,6 +206,10 @@ h1 {
   transform: scale(1.25);
 }
 
+.close-icon {
+  display: none;
+}
+
 .input-task, .input-subtask {
   width: 350px;
   height: 60px;
@@ -193,6 +217,7 @@ h1 {
   padding: 10px;
   background-color: white;
   color: black;
+  z-index: 1;
 }
 
 .input-task {
@@ -206,8 +231,8 @@ h1 {
 
 .input-subtask {
   position: absolute; 
-  top: 18%;
-  right: 15%;
+  bottom: 53%;
+  right: 14%;
   z-index: 1;
 }
 
