--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,6 @@ h1 {
 
 .header-conta p {
   margin-top: 0.5rem;
-  /* letter-spacing: 0.05em; */
   font-weight: 500;
 }
 
@@ -88,11 +87,10 @@ h1 {
 
 .main-tasks-conta {
   background-color: #f5f5f5;
-  /* background-color: #f2f3f4; */
 }
 
 .overlay {
-  width: 100%;
+  width: 768px;
   height: 100vh;
   position: absolute;
   background:rgba(0,0,0,0.8);
@@ -102,7 +100,6 @@ h1 {
 
 .tasks-conta {
   max-width: 768px;
-  /* position: relative; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -122,14 +119,12 @@ h1 {
   margin-bottom: 5px;
   padding: 10px;
   position: relative;
-  /* z-index: 0; */
 }
 
 .task, .sub-task {
   display: flex;
   justify-content: space-between;
   padding: 4px;
-  /* margin-top:2.5px; */
   z-index: 0;
 }
 
@@ -216,44 +211,27 @@ h1 {
   transform: scale(1.25);
 }
 
+/* INPUT FIELD */
+
 .input-task, .input-subtask {
-  /* width: 450px; */
-  width: 100%;
+  position: fixed;
+  bottom: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 480px;
   height: 100px;
   border-radius: 5px;
   padding: 10px;
   background-color: white;
   color: black;
- 
-}
-
-.input-task {
-  position: fixed;
-  bottom: 15%;
-  /* left: 50%; */
-  /* margin-left: -225px; */
   z-index: 1;
 }
-
-/* ADDSUBTASKBUTTON */
-
-.input-subtask {
-  /* position: absolute; 
-  bottom: 0;
-  left: 0;
-  /* right: 14%; */
-  
-  position: fixed;
-  bottom: 15%;
-  right: 0;
-  z-index: 99;  
-}
-
-/* OTHERS */
 
 input {
   font-family: 'Rubik', sans-serif;
 }
+
+/* OTHERS */
 
 button {
   cursor: pointer;
