--- a/src/App.css
+++ b/src/App.css
@@ -218,7 +218,7 @@ h1 {
   bottom: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 480px;
+  width: 280px;
   height: 100px;
   border-radius: 5px;
   padding: 10px;
@@ -236,3 +236,10 @@ input {
 button {
   cursor: pointer;
 }
+
+@media (min-width: 768px) {
+  .input-task, .input-subtask {
+    width: 480px;
+  }
+}
+
